--- a/templates/admindashboard/newoffer.html
+++ b/templates/admindashboard/newoffer.html
@@ -52,6 +52,14 @@
                                 <textarea class="form-control" id="exampleTextarea1" rows="4" name="description"></textarea>
                               </div>
                               <div class="form-group">
+                                <label for="exampleInputLocation">Location</label>
+                                <input type="text" class="form-control" id="exampleInputLocation" placeholder="Location" name="lieu">
+                              </div>
+                              <div class="form-group">
+                                <label for="exampleInputCapacity">Capacity</label>
+                                <input type="number" class="form-control" id="exampleInputCapacity" placeholder="Capacity" name="capacité">
+                              </div>
+                              <div class="form-group">
                                 <label for="exampleTextarea1">Offer Cost</label>
                                 <div class="input-group">
                                   <div class="input-group-prepend">
@@ -63,6 +71,7 @@
                                   </div>
                                 </div>
                               </div>
+                              
                             <div class="form-group">
                               <label for="exampleTextarea1">Category</label>
                               <select class="form-control" name="categorie">
