--- a/templates/admindashboard/offers.html
+++ b/templates/admindashboard/offers.html
@@ -129,9 +129,17 @@
                           </div>
                         </div>
                         <div class="form-group">
+                          <label for="exampleInputLocation">Location</label>
+                          <input type="text" class="form-control" id="exampleInputLocation" placeholder="Location" name="lieu" value={{offer.lieu}}>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputCapacity">Capacity</label>
+                          <input type="number" class="form-control" id="exampleInputCapacity" placeholder="Capacity" name="capacité" value={{offers.capacite}}>
+                        </div>
+                        <div class="form-group">
                           <label for="exampleTextarea1">Category</label>
                           <select class="form-control" name="categorie">
-                            <option value="" {% if not offer.category %} selected {% endif %}>No Category</option>
+                            <option value="" {% if not offer.categorie %} selected {% endif %}>No Category</option>
                             {% for category in categories %}
                                 <option value="{{ category.id }}" {% if offer.categorie.id == category.id %} selected {% endif %}>{{ category.nom }}</option>
                               {% endfor %}
