--- a/templates/pages/Offers.html
+++ b/templates/pages/Offers.html
@@ -155,7 +155,7 @@
                                 <span>/ per person</span>
                               </p>
             
-                              <button class="btn btn-secondary">Book Now</button>
+                              <a class="btn btn-secondary" href="{% url 'reserver_offre' offer.id %}">Book Now</a>
             
                             </div>
             
