fixed a bug of capacity in edit offer

--- a/templates/admindashboard/offers.html
+++ b/templates/admindashboard/offers.html
@@ -134,7 +134,7 @@
                         </div>
                         <div class="form-group">
                           <label for="exampleInputCapacity">Capacity</label>
-                          <input type="number" class="form-control" id="exampleInputCapacity" placeholder="Capacity" name="capacité" value={{offers.capacite}}>
+                          <input type="number" class="form-control" id="exampleInputCapacity" placeholder="Capacity" name="capacité" value={{offer.capacite}}>
                         </div>
                         <div class="form-group">
                           <label for="exampleTextarea1">Category</label>
