--- a/templates/admindashboard/contactus.html
+++ b/templates/admindashboard/contactus.html
@@ -41,6 +41,18 @@
                 <div class="card">
                   <div class="card-body">
                     <div class="container">
+                      <div class="row">
+                          {% for msg in messages %}
+                                    
+                                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                      {{ msg }}
+                                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                          <span aria-hidden="true">&times;</span>
+                                      </button>
+                                  </div>
+                                    
+                                {% endfor %}
+                        </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <h4 class="card-title">All Messages</h4>
@@ -50,6 +62,7 @@
                     <div class="table-responsive">
                       <table class="table">
                         <thead>
+                          
                           <tr>
                             <th> Message id </th>
                             <th> Full Name </th>
@@ -58,18 +71,19 @@
                           </tr>
                         </thead>
                         <tbody>
+                          {% for msg in message %}
                           <tr>
-                                <td> 02312 </td>
-                                <td> Khalid bn Ali </td>
-                                <td >Khalid@gmail.com </td>
+                                <td> {{ msg.id }}</td>
+                                <td> {{ msg.name }} </td>
+                                <td >{{ msg.email }} </td>
                                 <td class="d-flex">
-                                    <a class="nav-link" data-toggle="modal" href="#viewMessageModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
+                                    <a class="nav-link" data-toggle="modal" href="#viewMessageModal{{ msg.id }}" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
                                         <div class="badge badge-outline-success">
                                             <span class="menu-icon">
                                                 <i class="mdi mdi-eye"></i>                                            </span>
                                         </div>
                                     </a>
-                                    <a class="nav-link" data-toggle="modal" href="#sendMessageModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
+                                    <a class="nav-link" data-toggle="modal" href="#sendMessageModal{{ msg.id }}" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
                                         <div class="badge badge-outline-primary">
                                             <span class="menu-icon">
                                                 <i class="mdi mdi-grease-pencil"></i>
@@ -79,47 +93,7 @@
                                 </td>
                                                             
                           </tr>
-                          <tr>
-                            <td> 02312 </td>
-                            <td> Khalid bn Ali </td>
-                            <td >Khalid@gmail.com </td>
-                            <td class="d-flex">
-                                <a class="nav-link" data-toggle="modal" href="#viewMessageModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
-                                    <div class="badge badge-outline-success">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-eye"></i>                                            </span>
-                                    </div>
-                                </a>
-                                <a class="nav-link" data-toggle="modal" href="#sendMessageModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
-                                    <div class="badge badge-outline-primary">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-grease-pencil"></i>
-                                        </span>
-                                    </div>
-                                </a>
-                            </td>                           
-                          </tr>
-                          <tr>
-                            <td> 02312 </td>
-                            <td> Khalid bn Ali </td>
-                            <td >Khalid@gmail.com </td>
-                            <td class="d-flex">
-                                <a class="nav-link" data-toggle="modal" href="#viewMessageModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0;">
-                                    <div class="badge badge-outline-success">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-eye"></i>                                            </span>
-                                    </div>
-                                </a>
-                                <a class="nav-link" data-toggle="modal" href="#sendMessageModal" aria-expanded="false" aria-controls="ui-basic" style="margin-right: 0; padding-right: 0; padding-left :6%;">
-                                    <div class="badge badge-outline-primary">
-                                        <span class="menu-icon">
-                                            <i class="mdi mdi-grease-pencil"></i>
-                                        </span>
-                                    </div>
-                                </a>
-                            </td>
-                                                        
-                          </tr>
+                          {% endfor %}
                         </tbody>
                       </table>
                     </div>
@@ -129,38 +103,44 @@
               </div>
               
             </div>
-            <div id="sendMessageModal" class="modal fade" >
+            {% for msg in message %}
+            <div id="sendMessageModal{{ msg.id }}" class="modal fade" >
                  <div class="modal-dialog" >
                     <div class="modal-content">
                             <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Send Message</h4>
-                                <form class="forms-sample">
-                                <div class="form-group">
-                                    <label for="exampleInputUsername1">Email</label>
-                                    <input type="email" class="form-control" id="exampleInputUsername1" placeholder="email@mail.com">
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleTextarea1">Message</label>
-                                    <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
+                                <form class="forms-sample" action="{% url 'send_message_to_client'%}" method="POST">
+                                  {% csrf_token %}
+                                  <div class="form-group">
+                                    <label for="exampleInputUsername1">Name</label>
+                                    <input type="text" class="form-control" id="name" name="name" value="{{ msg.name }}" Required>
                                   </div>
-                                <button type="submit" class="btn btn-primary mr-2">Send</button>
-                                <button class="btn btn-dark" data-dismiss="modal">Cancel</button>
+                                    <div class="form-group">
+                                        <label for="exampleInputUsername1">Email</label>
+                                        <input type="email" class="form-control" id="email" name="email" value="{{ msg.email }}" Required>
+                                      </div>
+                                    <div class="form-group">
+                                      <label for="exampleTextarea1">Message</label>
+                                      <textarea class="form-control" id="exampleTextarea1" rows="4" name="message" Required></textarea>
+                                    </div>
+                                  <button type="submit" class="btn btn-primary mr-2">Send</button>
+                                  <button class="btn btn-dark" data-dismiss="modal">Cancel</button>
                                 </form>
                             </div>
                             </div>
                     </div>
                  </div>
             </div>
-            <div id="viewMessageModal" class="modal fade">
+            <div id="viewMessageModal{{ msg.id }}" class="modal fade">
                 <div class="modal-dialog">
                   <div class="modal-content">
                       
                     <div class="card-body">
                         <h4 class="card-title">Message</h4>
-                        <p class="card-description"> Message from Khalid bn Ali </p>
+                        <p class="card-description"> Message from {{ msg.name }} </p>
                         <blockquote class="blockquote">
-                          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                          <p class="mb-0">{{ msg.message }}</p>
                         </blockquote>
                       </div>
                       <div class="modal-footer">
@@ -172,6 +152,7 @@
                 </div>
               </div>
             </div>
+            {% endfor %}
           </div>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
