--- a/templates/pages/ContactUs.html
+++ b/templates/pages/ContactUs.html
@@ -45,22 +45,39 @@
                     </div>
                     <div class="right-side">
                       <div class="topic-text">Send us a message</div>
-                      <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
-                      <form action="#">
-                        <div class="input-box">
-                          <input type="text" placeholder="Enter your name" />
-                        </div>
-                        <div class="input-box">
-                          <input type="text" placeholder="Enter your email" />
-                        </div>
-                        <div class="input-box message-box">
-                          <textarea placeholder="Enter your message"></textarea>
-                        </div>
-                        <button class="btn btn-primary">Send Message</button>
-                      </form>
+                        <p>If you have any work from me or any types of quries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
+                        <form action="{% url 'client_message'%}" name="contact_us" id="contact_us_Form" method="POST">
+                          {% csrf_token %}
+                          <div class="input-box">
+                            {% for msg in messages %}
+                                {% if "Message sent successfully" in msg %}
+                                  <br>
+                                    <div class="alert alert-success" role="alert">
+                                        {{ msg }}
+                                    </div>
+                                {% else %}
+                                <br>
+                                    <div class="alert alert-danger" role="alert">
+                                        {{ msg }}
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                          </div>
+                          <div class="input-box">
+                            <input type="text" name = "name" placeholder="Enter your name" required/>
+                          </div>
+                          <div class="input-box">
+                            <input type="email" name="email" placeholder="Enter your email" required/>
+                          </div>
+                          <div class="input-box message-box">
+                            <textarea name="message" placeholder="Enter your message" required></textarea>
+                          </div>
+                          <button class="btn btn-primary" type ="">Send Message</button>
+                        </form>
                     </div>
                   </div>
-                </div>              </div>
+                </div>              
+              </div>
             </section>
       
             
