changed offers and packages to make them work

--- a/templates/pages/Package.html
+++ b/templates/pages/Package.html
@@ -48,7 +48,7 @@
                         </figure>
                         <div class="card-content">
                           <h3 class="h3 card-title">
-                            <a href="#">{{ category.nom }}</a>
+                            <a href="/offers?categorie={{category.id}}">{{ category.nom }}</a>
                           </h3>
                           <p class="card-text">
                             <div class="card-text">
