forgot password added

--- a/templates/pages/ForgotpasswordUpdate.html
+++ b/templates/pages/ForgotpasswordUpdate.html
@@ -38,14 +38,19 @@
                         </div>
                       </div>
                     </div>
-                    <form action="{% url 'Code_validation' %}" name="CodeVerificationForm" id="CodeVerificationForm" method="POST">
+                    <form action="{% url 'forgot_password_update' %}" name="CodeVerificationForm" id="CodeVerificationForm" method="POST">
                         {% csrf_token %}                      
                         <div class="row gy-3 overflow-hidden">
                             <div class="col-12">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" name="VeriCode" id="VerificationCode" required>
-                                    <label for="Verification Code" class="form-label">Verification Code</label>
+                                    <input type="password" class="form-control" name="passwordupdate" id="passwordupdate" required>
+                                    <label for="passwordupdate" class="form-label">New Password</label>
                                 </div>
+                                <div class="form-floating mb-3">
+                                    <input type="password" class="form-control" name="confirmpassword" id="confirmpassword" required>
+                                    <label for="confirmpassword" class="form-label">Confirm New Password</label>
+                                </div>
+                                <p id="passwordError" style="color: red; display: none;">Passwords do not match.</p>
                             </div>
                             <div class="col-12">
                                 {% comment %} {% if msg %}
@@ -65,11 +70,12 @@
                             </div>
                             <div class="col-12">
                                 <div class="d-grid">
-                                    <button class="btn btn-dark btn-lg" type="submit">Verify now</button>
+                                    <button class="btn btn-dark btn-lg" type="submit" id="submitButton">Submit</button>
                                 </div>
                             </div>
                         </div>
                     </form>
+                    
                   </div>
                 </div>
               </div>
@@ -81,5 +87,17 @@
   </section>
 </body>
 </html>
-<script>
-  
+    <script>
+        document.getElementById("submitButton").addEventListener("click", function (event) {
+            var password = document.getElementById("passwordupdate").value;
+            var confirmPassword = document.getElementById("confirmpassword").value;
+            var passwordError = document.getElementById("passwordError");
+    
+            if (password !== confirmPassword) {
+                passwordError.style.display = "block";
+                event.preventDefault(); // Prevent form submission
+            } else {
+                passwordError.style.display = "none";
+            }
+        });
+    </script>
