--- a/templates/pages/ForgotpasswordVeri.html
+++ b/templates/pages/ForgotpasswordVeri.html
@@ -38,7 +38,7 @@
                         </div>
                       </div>
                     </div>
-                    <form action="{% url 'Code_validation' %}" name="CodeVerificationForm" id="CodeVerificationForm" method="POST">
+                    <form action="{% url 'forgot_password_veri' %}" name="CodeVerificationForm" id="CodeVerificationForm" method="POST">
                         {% csrf_token %}                      
                         <div class="row gy-3 overflow-hidden">
                             <div class="col-12">
@@ -70,6 +70,7 @@
                             </div>
                         </div>
                     </form>
+                    
                   </div>
                 </div>
               </div>
