--- a/templates/pages/Forgotpassword.html
+++ b/templates/pages/Forgotpassword.html
@@ -38,13 +38,13 @@
                         </div>
                       </div>
                     </div>
-                    <form action="{% url 'Code_validation' %}" name="CodeVerificationForm" id="CodeVerificationForm" method="POST">
+                    <form action="{% url 'forgot_password_email_validation' %}" name="CodeVerificationForm" id="CodeVerificationForm" method="POST">
                         {% csrf_token %}                      
                         <div class="row gy-3 overflow-hidden">
                             <div class="col-12">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" name="VeriCode" id="VerificationCode" required>
-                                    <label for="Verification Code" class="form-label">Verification Code</label>
+                                    <input type="email" class="form-control" name="email" id="email" required>
+                                    <label for="Verification Code" class="form-label">Entre votre email</label>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -65,11 +65,12 @@
                             </div>
                             <div class="col-12">
                                 <div class="d-grid">
-                                    <button class="btn btn-dark btn-lg" type="submit">Verify now</button>
+                                    <button class="btn btn-dark btn-lg" type="submit">submit</button>
                                 </div>
                             </div>
                         </div>
                     </form>
+                    
                   </div>
                 </div>
               </div>
