--- a/templates/pages/LoginSingUp.html
+++ b/templates/pages/LoginSingUp.html
@@ -115,7 +115,7 @@
                         <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-center mt-5">
                           <a href="#!" class="link-secondary text-decoration-none" onclick="toggleForms()" id="singuplink">Create new account</a>
                           <a href="#!" class="link-secondary text-decoration-none" style="display: none;" onclick="toggleForms()" id="loginlink">Login</a>
-                          <a href="#!" class="link-secondary text-decoration-none" id="forgetpasslink">Forgot password</a>
+                          <a href="{{'forgot_password'}}" class="link-secondary text-decoration-none" id="forgetpasslink">Forgot password</a>
                         </div>
                       </div>
                     </div>
